remove csrf_token_generator, as documentation that it needs further config to work

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,7 +15,9 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
+                # To use, uncomment the `csrf_protection` section in
+                # config/packages/framework.yaml
+                # csrf_token_generator: security.csrf.token_manager
 
             logout:       true
             anonymous:    true
